@@ -24,8 +24,8 @@ import java.beans.ConstructorProperties;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.HashSet;
 import java.util.Iterator;
-import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -45,6 +45,9 @@ import org.slf4j.LoggerFactory;
  * multiple child {@link cascading.tap.Tap} instances simultaneously.
  * <p/>
  * It is the counterpart to {@link cascading.tap.MultiSourceTap}.
+ * <p/>
+ * Note all child Tap instances may or may not have the same declared Fields. In the case they do not, all
+ * sink fields will be merged into a single Fields instance via {@link Fields#merge(cascading.tuple.Fields...)}.
  */
 public class MultiSinkTap<Child extends Tap, Config, Output> extends SinkTap<Config, Output> implements CompositeTap<Child>
   {
@@ -147,6 +150,13 @@ public class MultiSinkTap<Child extends Tap, Config, Output> extends SinkTap<Con
     }
 
   @Override
+  public void presentSinkFields( FlowProcess<Config> flowProcess, Fields fields )
+    {
+    for( Tap child : getTaps() )
+      child.presentSinkFields( flowProcess, fields );
+    }
+
+  @Override
   public TupleEntryCollector openForWrite( FlowProcess<Config> flowProcess, Output output ) throws IOException
     {
     return new MultiSinkCollector( flowProcess, getTaps() );
@@ -245,15 +255,19 @@ public class MultiSinkTap<Child extends Tap, Config, Output> extends SinkTap<Con
     if( super.getScheme() != null )
       return super.getScheme();
 
-    Set<Comparable> fieldNames = new LinkedHashSet<Comparable>();
+    Set<Fields> fields = new HashSet<Fields>();
 
-    for( int i = 0; i < getTaps().length; i++ )
+    for( Tap child : getTaps() )
+      fields.add( child.getSinkFields() );
+
+    // if all schemes have the same sink fields, the just use the scheme
+    if( fields.size() == 1 )
       {
-      for( Object o : getTaps()[ i ].getSinkFields() )
-        fieldNames.add( (Comparable) o );
+      setScheme( getTaps()[ 0 ].getScheme() );
+      return super.getScheme();
       }
 
-    Fields allFields = new Fields( fieldNames.toArray( new Comparable[ fieldNames.size() ] ) );
+    Fields allFields = Fields.merge( fields.toArray( new Fields[ fields.size() ] ) );
 
     setScheme( new NullScheme( allFields, allFields ) );
 
